--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -142,10 +142,12 @@ header .picture .one p {
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 55px;
+    float: top center;
 }
 #outside{
 	background-color: #1E1E1E;
 	display: inline-block;
+
 	width: 85%;
 	max-width: 375px;
 	margin: 5% 3% 0 3%;
@@ -155,7 +157,7 @@ header .picture .one p {
 	padding-bottom: 4%;
 
 }
-.test1{
+.test{
 	width: 55%;
 	border: 2px solid;
 	border-color: #2D2D2D;
@@ -228,7 +230,7 @@ header {
     -o-background-size: cover;
 }
 .fancy{
-    margin-top: 200px;
+/*    margin-top: 200px;*/
     font-size: 3em;
 }
 .smaller {
@@ -290,7 +292,7 @@ header {
 }
 .fancy{
 	margin-top: 190px;
-	font-size: 3em;
+	font-size: 5em;
 }
 .smaller {
 	text-transform: none;
@@ -602,7 +604,7 @@ header {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 175px;
+	margin-top: -2px;
 }
 
 .smaller {
@@ -694,7 +696,7 @@ header {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 125px;
+	margin-top: -100px !important;
 }
 
 .smaller {
@@ -912,9 +914,9 @@ header {
 	font-size: 3.5em;
 	padding-top: 3%;
 }
-.fancy{
-	margin-top: -150px;
-}
+/*.fancy{
+	margin-top: ;
+}*/
 
 .smaller {
 	text-transform: none;
