--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,1 +1,218 @@
+/*** Fonts ***/
+
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
+@import url('https://fonts.googleapis.com/css?family=Josefin+Slab');
+@import url('https://fonts.googleapis.com/css?family=Montez');
+@import url('https://fonts.googleapis.com/css?family=Monsieur+La+Doulaise');
+
 /*** Body ***/
+html,
+body {
+
+}
+
+body {
+	padding-top: 70px;
+    font-family: 'Josefin Slab','Helvetica Neue', Arial, sans-serif;
+    background-color: #1E1D1F;
+    color: #C9C9C9;
+}
+.symbol {
+	font-family: "Monsieur La Doulaise";
+	font-size: 6em;
+	text-align: center;
+}
+.sectionName {
+	font-family: "Monsieur La Doulaise";
+	text-align: center;
+	font-size: 3em;
+	margin: 2.5%;
+}
+
+/*** Navigation ***/
+.navbar-brand {
+	font-family: "Kaushan Script";
+}
+.prime {
+	font-family: "Josefin Slab";
+	font-size: 1.3em;
+	/*font-color: #C9C9C9;*/
+}
+a {
+    color: #FFFFFF;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    transition: all .4;
+}
+hr {
+    border-width: 3px;
+    opacity: 0.09;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 75%;
+}
+/*** quotes ***/
+.quote {
+	background-color: #0D0D0D;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+}
+#inner-quote {
+	font-family: "Kaushan Script", Arial;
+}
+#subtitle {
+	font-size: 333%;
+	font-family: "Montez";
+	font-size: 5em;
+    padding-top: 40px;
+    padding-bottom: 20px;
+}
+/*****Footer*****/
+.panel-footer {
+	background-color: #1E1D1F; 
+	margin-top: 30px;
+	padding-top: 35px;
+    padding-bottom:30px;
+    border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+#contact-info, #address {
+  line-height: 2; /* adjusts space between lines */
+}
+#contact-info > span, #address > span { /*hours and address became larger */
+  font-size: 1.3em;
+}
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+.ion-social-facebook{
+	color: #2b427c;
+}
+#social a {
+	font-size: 500%;
+	text-align: right;
+	text-decoration: none;
+}
+#social a span {
+	font-size: 50%;
+}
+.phone {
+    color: #ffff80;
+    text-decoration: underline;
+}
+a .phone:hover {
+    color: violet;
+}
+
+* {box-sizing:border-box}
+
+/*** SLIDESHOW ***/
+.slideshow-container {
+  max-width: 90%;
+  position: relative;
+  margin: auto;
+  border-color: black;
+}
+
+.mySlides {
+    display: none;
+    text-align: center;
+}
+
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+}
+.prev{
+	margin-left: 9%;
+}
+.next{
+	margin-right: 9%;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor:pointer;
+  height: 10px;
+  width: 10px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 10000s;
+  animation-name: fade;
+  animation-duration: 100000s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: 1} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: 1} 
+  to {opacity: 1}
+}
+
+/*** General Responsive Design ***/
+@media(min-width:1200px) {
+.slideshow-container {
+	max-width: 70%;
+}
+}
