--- a/css/gallery.css
+++ b/css/gallery.css
@@ -14,7 +14,7 @@ body {
 body {
 	padding-top: 70px;
     font-family: 'Josefin Slab','Helvetica Neue', Arial, sans-serif;
-    background-color: #1E1D1F;
+    background-color: #070707;
     color: #C9C9C9;
 }
 .symbol {
@@ -28,7 +28,9 @@ body {
 	font-size: 3em;
 	margin: 2.5%;
 }
-
+.romance {
+	padding-left: 10px;
+}
 /*** Navigation ***/
 .navbar-brand {
 	font-family: "Kaushan Script";
@@ -124,7 +126,6 @@ a .phone:hover {
     text-align: center;
 }
 
-
 /* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
@@ -139,42 +140,27 @@ a .phone:hover {
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
 }
+
 .prev{
 	margin-left: 9%;
 }
+
 .next{
 	margin-right: 9%;
 }
+
 /* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
+
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
 
 /* The dots/bullets/indicators */
 .dot {
@@ -200,6 +186,7 @@ a .phone:hover {
   animation-duration: 100000s;
 }
 
+
 @-webkit-keyframes fade {
   from {opacity: 1} 
   to {opacity: 1}
@@ -210,9 +197,40 @@ a .phone:hover {
   to {opacity: 1}
 }
 
+
 /*** General Responsive Design ***/
-@media(min-width:1200px) {
+@media(min-width:750px) {
+
+.vert {
+	max-width: 68vw;
+	max-height: 168vh;
+}
+}
+/*** Large ***/
+@media(min-width:1050px) {
 .slideshow-container {
 	max-width: 70%;
+}
+@media(min-width:1050px) {
+.slideshow-container2 {
+	max-width: 70%;
+}
+.vert {
+	max-width: 50vw;
+	max-height: 150vh;
+}
+}
+/** Larger **/
+@media(min-width:1225px) {
+.slideshow-container {
+	max-width: 70%;
+}
+@media(min-width:1225px) {
+.slideshow-container2 {
+	max-width: 70%;
+}
+.vert {
+	max-width: 35vw;
+	max-height: 135vh;
 }
 }
