--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -358,7 +358,7 @@ header {
     background-size: cover;
     -o-background-size: cover;
 }
-    .navbar-inverse {
+/*    .navbar-inverse {
         border-color: transparent;
         background-color: transparent;
         min-height: 60px;
@@ -366,7 +366,7 @@ header {
     .navbar-inverse.affix {
     border-color: rgba(34,34,34,.05);
     background-color: #222;
-}
+}*/
 .fancy{
 	margin-top: 190px;
 	font-size: 5em;
