--- a/css/gallery.css
+++ b/css/gallery.css
@@ -105,7 +105,7 @@ hr {
 	font-size: 50%;
 }
 .phone {
-    color: #ffff80;
+/*    color: #ffff80;*/
     text-decoration: underline;
 }
 a .phone:hover {
