--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -300,7 +300,7 @@ header {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
+    background-image: url('../assets/cell-image1.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -346,6 +346,9 @@ header {
 }*/
 
 @media(min-width:767px) {
+body{
+    margin-top: 2.5%;
+}
 header {
     position: relative;
     min-height: 100%;
@@ -1099,7 +1102,7 @@ header {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
+    background-image: url('../assets/cell-image1.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -1130,7 +1133,7 @@ header {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
+    background-image: url('../assets/cell-image1.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
