--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -415,7 +415,7 @@ header {
     -o-background-size: cover;
 }
 .fancy{
-	margin-top: 200px ;
+	margin-top: 50px ;
 	font-size: 3em;
 }
 .smaller {
@@ -612,7 +612,7 @@ header {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 300px !important; 
+	/*margin-top: 300px !important; */
 }
 
 .smaller {
@@ -801,7 +801,7 @@ header {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 145px;
+/*	margin-top: 145px;*/
 }
 
 .smaller {
@@ -863,7 +863,7 @@ header {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 145px;
+/*	margin-top: 145px;*/
 }
 
 .smaller {
@@ -921,16 +921,16 @@ header {
 .fancy {
 	font-family: "Montez";
 	text-transform: none;
-	font-size: 3.3em;
-	padding-top: 3%;
+	font-size: 4.5em;
+/*	padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 250px;
+	margin-top: 30px;
 }
 
 .smaller {
 	text-transform: none;
-	font-size: 1em;
+	font-size: 1.5em;
 }
 }
 
@@ -984,8 +984,8 @@ header {
 .fancy {
 	font-family: "Montez";
 	text-transform: none;
-	font-size: 3.5em;
-	padding-top: 3%;
+	font-size: 6em;
+/*	padding-top: 3%;*/
 }
 /*.fancy{
 	margin-top: ;
@@ -993,7 +993,7 @@ header {
 
 .smaller {
 	text-transform: none;
-	font-size: 1.25em;
+	font-size: 2.25em;
 
 }
 }
@@ -1179,7 +1179,7 @@ header {
 	/*padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 300px;
+	margin-top: 100px;
 }
 
 .smaller {
@@ -1242,7 +1242,7 @@ header {
 	/*padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 100px;
+/*	margin-top: px;*/
 }
 
 .smaller {
@@ -1368,7 +1368,7 @@ header {
 	/*padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 85px;
+/*	margin-top: 85px;*/
 }
 
 .smaller {
@@ -1431,7 +1431,7 @@ header {
 	/*padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 100px;
+	/*margin-top: 5px;*/
 }
 
 .smaller {
@@ -1494,7 +1494,7 @@ header {
 	/*padding-top: 3%;*/
 }
 .fancy{
-	margin-top: 100px;
+/*	margin-top: 100px;*/
 }
 
 .smaller {
