--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -266,7 +266,7 @@ header .picture .one p {
 }
 #address p {
   color: #557c3e;
-  font-size: 1.3em;
+  font-size: .9em;
   line-height: 1.8;
 }
 .ion-social-facebook{
